Add : login/logout & auth token

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -19,7 +19,7 @@
 				<ul>
 					<li><a href="#portfolio">projets</a></li>
 					<li><a href="#contact">contact</a></li>
-					<li><a href="./pages/login.html">login</a></li>
+					<li><a href="./pages/login.html" id="auth-link">login</a></li>
 					<li><img src="./assets/icons/instagram.png" alt="Instagram" /></li>
 				</ul>
 			</nav>
@@ -83,5 +83,6 @@
 			</nav>
 		</footer>
 	</body>
-	<script src="./api/worksApi.js"></script>
+	<script src="./api/api.js"></script>
+	<script src="./auth/auth.js"></script>
 </html>
