--- a/FrontEnd/pages/login.html
+++ b/FrontEnd/pages/login.html
@@ -26,12 +26,16 @@
 		<main>
 			<section id="contact" class="page-login">
 				<h2>Log In</h2>
-				<form action="#" method="post">
+				<form id="login-form">
 					<label for="email">E-mail</label>
-					<input type="email" name="email" id="email" />
+					<input type="email" name="email" id="email" required/>
 					<label for="password">Mot de passe</label>
-					<input type="password" name="password" id="password" />
-					<input type="submit" value="Se connecter" />
+					<input type="password" name="password" id="password" required/>
+
+					<p id="login-error" class="error-message">
+						E-mail ou mot de passe incorrect
+					</p>
+					<button type="submit" class="btn-connexion">Se connecter</button>
 				</form>
 				<a href="#" class="password-flex">Mot de passe oublié</a>
 			</section>
@@ -44,4 +48,7 @@
 			</ul>
 		</nav>
 	</footer>
+
+	<script src="../api/api.js"></script>
+	<script src="../script/login.js"></script>
 </html>
